--- a/src/portfolio_template_frontend/src/index.html
+++ b/src/portfolio_template_frontend/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yuehan Portfolio</title>
+    <title>Ponce Portfolio</title>
     <!-- Font Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -12,7 +12,7 @@
         body {
             margin: 0;
             font-family: Arial, sans-serif;
-            background-image: url('images/devcon_background.png');
+            background-image: url('../assets/images/devcon_background.png');
             background-repeat: no-repeat;
             background-position: left;
             background-size: cover;
@@ -402,34 +402,26 @@
         </div>
 
         <!-- Placeholder for your name -->
-        <h1>John Richard Alix</h1>
-        <p class="description">I am an innovator, and build projects for fun♥</p>
+        <h1>Lizy Joy Ponce</h1>
+        <p class="description">A 3rd year student from West Visayas State University♥</p>
         <h3>About Me:</h3>
+        <p class="description"></p>
 
         <!-- Placeholder for About Me Section -->
         <div class="about-me">
             <h3>DEVCON Affiliations:</h3>
             <ul>
-                <li>DEVCON Cagayan de Oro Vice President - 2025</li>
-                <li>DEVCON Code Camps Core Team - 2025</li>
-                <li>Former DEVCON Vice President for Student Engagement - 2024</li>
-                <li>Former Campus DEVCON Ambassador - 2024</li>
+                <li>DEVCON Iloilo</li>
+                <li>DEVCON Iloilo Smart Contracts Code Camp - Trainee</li>
+               
             </ul>
 
-            <h3>Google Developers Affiliations:</h3>
-            <ul>
-                <li>Technical Core Team Member - 2025</li>
-                <li>Former Documentations Core Team Member - 2024</li>
-                <li>GDSC USTP IT Ambassador - 2022</li>
-                <li>GDSC USTP Mobile Development Lead - '2023-2024'</li>
-            </ul>
-        </div>
+
 
         <!-- Centered Links -->
         <div class="links">
-            <a href="https://www.linkedin.com/in/john-richard-alix-666481230/"><i class="fab fa-linkedin"></i>LinkedIn</a>
-            <a href="https://github.com/yhnalx"><i class="fab fa-github"></i>GitHub</a>
-            <a href="https://www.facebook.com/yhnalx"><i class="fab fa-facebook"></i>Facebook</a>
+            <a href="https://github.com/Lizy-Joy"><i class="fab fa-github"></i>GitHub</a>
+            <a href="https://www.facebook.com/Lizyjoy.ponce04"><i class="fab fa-facebook"></i>Facebook</a>
         </div>
 
         <div class="visitor-count">
